# CSC4140

./: README.md
120090453_HW_1/: CMakeLists.txt  main.cpp
120090453_HW_1/src/: CMakeLists.txt  Makefile  cmake_install.cmake  q2-1.cpp  q2-2.cpp  q2-3.cpp  q2-4.cpp
120090453_HW_2/: CMakeLists.txt  Readme.md  compile_run.sh  main.cpp
120090453_HW_3&4/Assignment3&4/src/: drawrend.cpp  rasterizer.cpp  rasterizer.h  texture.h
120090453_HW_5/Assignment5/src/: student_code.cpp  student_code.h
120090453_HW_5/info/: halfedge.html  halfedgemesh.html  iteratiors.html
120090453_HW_6/Assignment6_RayTracing1/RayTracing1/: CMakeLists.txt
120090453_HW_6/Assignment6_RayTracing1/RayTracing1/src/pathtracer/: advanced_bsdf.cpp  bsdf.cpp  camera.cpp  pathtracer.cpp  pathtracer.h
120090453_HW_6/Assignment6_RayTracing1/RayTracing1/src/scene/: bbox.cpp  bvh.cpp  bvh.h  environment_light.cpp  scene.h  sphere.cpp  sphere.h  triangle.cpp
120090453_HW_7/hw7_pathtracer/src/pathtracer/: advanced_bsdf.cpp  camera_lens.cpp
120090453_HW_7/hw7_pathtracer/src/scene/: environment_light.cpp
HW3&4/Assignment3&4/src/: drawrend.cpp  main.cpp  rasterizer.cpp  rasterizer.h  texture.cpp  texture.h  transforms.cpp  triangulation.h
